fixes table header position on small devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -167,15 +167,9 @@ thead tr {
 thead th {
   position: sticky;
   position: -webkit-sticky;
-  top: 80px;
+  top: 50px;
   background-color: var(--color-theme-table-row-sticky);
   z-index: 10;
-}
-
-@screen sm {
-  thead th {
-    top: 50px;
-  }
 }
 
 @screen md {
